# SWHC

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  EXPERIMENT_LOG.md  MIGRATION_MANIFEST.md  README.md  TASK.md  pyproject.toml
configs/: datasets.yaml  default.yaml  methods.yaml
docs/: CURRENT_GAPS.md
docs/upstream_hypergraphrag/: AGENTS.md  CLAUDE.md  EXPERIMENT_LOG.md  README.md  REPO_STRUCTURE.md  TASK.md
evaluation/: BACKEND_GUIDE.md  README.md  RUN_GUIDE.md  STRUCTURE.md  __init__.py  eval_g.py  get_generation.py  get_score.py  inference_backend.py  prepare_hotpotqa.py  script_bm25.py  script_graphrag.py  script_graphrag_index.py  script_hybrid_rag.py  script_hypergraphrag.py  script_insert.py  script_naivegeneration.py  script_standardrag.py  script_swhc.py  script_swhc_legacy.py  script_swhc_new.py  see_score.py
evaluation/contexts/: agriculture_contexts.json  cs_contexts.json  hotpotqa_64_contexts.json  hotpotqa_contexts.json  hotpotqa_probe_contexts.json  hypertension_contexts.json  mix_contexts.json
evaluation/hypergraphrag/: base.py  graphrag_local.py  hypergraphrag.py  llm.py  openai_config.py  operate.py  swhc.py
evaluation/methods/: README.md  __init__.py  bm25.py  common.py  graphrag.py  graphrag_official_common.py  hybrid_rag.py  hypergraphrag.py  naivegeneration.py  standardrag.py  swhc.py  swhc_legacy.py  swhc_new.py
evaluation/scripts/: construct_legacy.py  query_legacy.py
paper/: outline.md
scripts/: load_env.ps1
swhc/: __init__.py
swhc/adapters/: __init__.py  (+2 more)
tests/: __init__.py
tools/: parity_check.py
(+44 files in other folders)
