[project]
name = "swhc"
version = "0.1.0"
description = "Semantic Wiener HyperConnector research codebase"
requires-python = ">=3.11"
dependencies = [
  "networkx",
  "numpy",
  "tiktoken",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
